--- a/index.html
+++ b/index.html
@@ -1,114 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Olav Omtveit - Portfolio</title>
+  <title>Olav Omtveit - Portfolio</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
 
 </head>
-<body>
-    <header>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Olav Omtveit</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-menu">Menu</span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">About me</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./projects.html">Projects</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./archive.html">Archive</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">CV</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#"><span class="nav-text-orange">Get in touch</span></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
 
-          <div class="icon-container">
-            <img id="socialIcon" class="icon-container__social" src="img/icons/socialMedia.png" alt="Icons made by Retinaicons @ www.flaticon.com">
-            <a href="#"><img id="toTop" class="icon-container__toTop" src="img/icons/toTop.png" alt="Icons made by Retinaicons @ www.flaticon.com"></a>
-          </div>
-          <div id="closeIcon" class="icon-container__social-collapse">
-            <img class="icon-container__social-collapse--item close" src="img/icons/close.png" alt="Close social icons">
-            <div class="socialLine line1"></div>
-            <a href="https://github.com/olavomtveit" target="_blank"><img class="icon-container__social-collapse--item gitHub" src="img/icons/gitHub.png" alt="Icons made by Retinaicons @ www.flaticon.com"></a>
-            <div class="socialLine line2"></div>
-            <a href="https://www.linkedin.com/in/olavomtveit/" target="_blank"><img class="icon-container__social-collapse--item linkedIn" src="img/icons/linkedIn.png" alt="Icons made by Retinaicons @ www.flaticon.com"></a>
-            <div class="socialLine line3"></div>
-            <a href="#" target="_blank"><img class="icon-container__social-collapse--item discord" src="img/icons/discord.png" alt="Icons made by Retinaicons @ www.flaticon.com"></a>
-          </div>   
-    </header>
-    <main class="text-grey">
-        <div class="main-container">
-            <div class="main-container__text">
-              <div class="main-container__text--title">
-                <div>
-                  <img class="icon title-icon" src="img/icons/cells.svg" alt="Icons made by Retinaicons from www.flaticon.com">
-                </div>
-                <h1>Hi! I'm <span class="text-orange text-bold">Olav</span>.</h1>
-              </div>
-              <h3>I'm a <span class="text-blue text-bold">front-end developer</span> with a passion for <span class="text-blue text-bold">design</span> and <span class="text-blue text-bold">UI</span>.</h3>
-              <h3>Take a look at my <a href="./projects.html" class="linkNoStyle"><span class="text-blue text-bold">projects</span></a>, or <a href="#" class="linkNoStyle"><span class="text-orange text-bold">get in touch</span></a>.</h3>
-            </div>
-            <div class="main-container__quote">
-              <h3>"<span class="text-italic">Design is thinking made visual</span>".</h3>
-              <div class="main-container__quote--flex">
-                <div class="text-line text-line-left"></div>
-                <h3>Saul Bass</h3>
-                <div class="text-line text-line-right"></div>
-              </div>
-            </div>       
+<body>
+  <header>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Olav Omtveit</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-menu">Menu</span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./archive.html">Archive</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">CV</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><span class="nav-text-orange">Get in touch</span></a>
+            </li>
+          </ul>
         </div>
-        <div class="about-me-container">
-          <div class="about-me-container__title">
-            <img class="icon title-icon" src="img/icons/cells.svg" alt="Icons made by Retinaicons from www.flaticon.com">
-            <h1 class="text-blue">Some facts about me</h1>
-          </div>          
-        </div>
-        <div class="about-me-card">
-          <div class="about-me-card__header">
-            <div class="about-me-card__header--portrait">
-              <img src="./img/portrait/portrait.png" alt="Portrait of Olav Omtveit.">
-            </div>
-            <div class="about-me-card__header--text">
-              <h1>Olav Slaaen Omtveit</h1>
-              <h3>Currently studying at Noroff School of Technology.</h3>
-              <h3>Took a bachelor's degree in <span class="text-orange">Games Design</span> at UEL in London.</h3>
-            </div>
-          </div>
-          <div class="about-me-card__main">
-            <h3>I'm a relaxing guy who loves to explore the world and the technology in it.
-              I am excited and eager to join the Front-End world to start this chapter of my life. I have a lot of
-              experience with <span class="text-orange">people</span>, I'm a <span class="text-orange">quick learner</span>, and work well under <span class="text-orange">pressure</span>.
-            </h3>
-          </div>
-        </div>
-    </main>
-    <footer>
-      <div>
-        Designed by <span class="text-bold">Olav Slaaen Omtveit</span>
       </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
+    </nav>
+
+    <div class="icon-container">
+      <img id="socialIcon" class="icon-container__social" src="img/icons/socialMedia.png"
+        alt="Icons made by Retinaicons @ www.flaticon.com">
+      <a href="#"><img id="toTop" class="icon-container__toTop" src="img/icons/toTop.png"
+          alt="Icons made by Retinaicons @ www.flaticon.com"></a>
+    </div>
+    <div id="closeIcon" class="icon-container__social-collapse">
+      <img class="icon-container__social-collapse--item close" src="img/icons/close.png" alt="Close social icons">
+      <div class="socialLine line1"></div>
+      <a href="https://github.com/olavomtveit" target="_blank"><img class="icon-container__social-collapse--item gitHub"
+          src="img/icons/gitHub.png" alt="Icons made by Retinaicons @ www.flaticon.com"></a>
+      <div class="socialLine line2"></div>
+      <a href="https://www.linkedin.com/in/olavomtveit/" target="_blank"><img
+          class="icon-container__social-collapse--item linkedIn" src="img/icons/linkedIn.png"
+          alt="Icons made by Retinaicons @ www.flaticon.com"></a>
+      <div class="socialLine line3"></div>
+      <a href="#" target="_blank"><img class="icon-container__social-collapse--item discord" src="img/icons/discord.png"
+          alt="Icons made by Retinaicons @ www.flaticon.com"></a>
+    </div>
+  </header>
+  <main class="text-grey">
+    <div class="main-container">
+      <div class="main-container__text">
+        <div class="main-container__text--title">
+          <div>
+            <img class="icon title-icon" src="img/icons/cells.svg"
+              alt="Icons made by Retinaicons from www.flaticon.com">
+          </div>
+          <h1>Hi! I'm <span class="text-orange text-bold">Olav</span>.</h1>
+        </div>
+        <h3>I'm a <span class="text-blue text-bold">front-end developer</span> with a passion for <span
+            class="text-blue text-bold">design</span> and <span class="text-blue text-bold">UI</span>.</h3>
+        <h3>Take a look at my <a href="./projects.html" class="linkNoStyle"><span
+              class="text-blue text-bold">projects</span></a>, or <a href="#" class="linkNoStyle"><span
+              class="text-orange text-bold">get in touch</span></a>.</h3>
+      </div>
+      <div class="main-container__quote">
+        <h3>"<span class="text-italic">Design is thinking made visual</span>".</h3>
+        <div class="main-container__quote--flex">
+          <div class="text-line text-line-left"></div>
+          <h3>Saul Bass</h3>
+          <div class="text-line text-line-right"></div>
+        </div>
+      </div>
+    </div>
+    <div class="about-me-container">
+      <div class="about-me-container__title">
+        <img class="icon title-icon" src="img/icons/cells.svg" alt="Icons made by Retinaicons from www.flaticon.com">
+        <h1 class="text-blue">Some facts about me</h1>
+      </div>
+    </div>
+    <div class="about-me-card">
+      <div class="about-me-card__header">
+        <div class="about-me-card__header--portrait">
+          <img src="./img/portrait/portrait.png" alt="Portrait of Olav Omtveit.">
+        </div>
+        <div class="about-me-card__header--text">
+          <h1>Olav Slaaen Omtveit</h1>
+          <h3>Currently studying at Noroff School of Technology.</h3>
+          <h3>Took a bachelor's degree in <span class="text-orange">Games Design</span> at UEL in London.</h3>
+        </div>
+      </div>
+      <div class="about-me-card__main">
+        <h3>I'm a relaxing guy who loves to explore the world and the technology in it.
+          I am excited and eager to join the Front-End world to start this chapter of my life. I have a lot of
+          experience with <span class="text-orange">people</span>, I'm a <span class="text-orange">quick learner</span>,
+          and work well under <span class="text-orange">pressure</span>.
+        </h3>
+      </div>
+    </div>
+  </main>
+  <footer>
+    <div>
+      Designed by <span class="text-bold">Olav Slaaen Omtveit</span>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+    integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+    crossorigin="anonymous"></script>
+  <script src="./js/script.js"></script>
 </body>
+
 </html>
