--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,11 @@
               <a class="nav-link" href="./archive.html">Archive</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CV</a>
+              <a class="nav-link" href="./cv.html">CV</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><span class="nav-text-orange">Get in touch</span></a>
+              <a class="nav-link" href="mailto:omtveit94@gmail.com"><span class="nav-text-orange">Get in
+                  touch</span></a>
             </li>
           </ul>
         </div>
