--- a/src/archive.html
+++ b/src/archive.html
@@ -97,6 +97,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
     integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
     crossorigin="anonymous"></script>
+  <script src="./js/data.js"></script>
+  <script src="./js/archive.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
