printing repos and added cv

--- a/src/archive.html
+++ b/src/archive.html
@@ -38,7 +38,7 @@
               <a class="nav-link active" aria-current="page" href="#">Archive</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./cv.html">CV</a>
+              <a class="nav-link" href="http://olavomtveit.com/documents/OlavOmtveit_CV.docx.pdf" target="_blank">CV</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./getintouch.html"><span class="nav-text-orange">Get in touch</span></a>
@@ -98,7 +98,6 @@
     integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
     crossorigin="anonymous"></script>
   <script src="./js/data.js"></script>
-  <script src="./js/archive.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
