--- a/src/projects.html
+++ b/src/projects.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="./archive.html">Archive</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./cv.html">CV</a>
+              <a class="nav-link" href="http://olavomtveit.com/documents/OlavOmtveit_CV.docx.pdf" target="_blank">CV</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./getintouch.html"><span class="nav-text-orange">Get in touch</span></a>
