--- a/src/getintouch.html
+++ b/src/getintouch.html
@@ -21,7 +21,7 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Olav Omtveit</a>
+                <a class="navbar-brand" href="./index.html">Olav Omtveit</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-menu">Menu</span>
