fixed some problems, fixed archive styling

--- a/src/index.html
+++ b/src/index.html
@@ -38,11 +38,8 @@
               <a class="nav-link" href="./archive.html">Archive</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://olavomtveit.com/documents/OlavOmtveit_CV.docx.pdf" target="_blank">CV</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="mailto:omtveit94@gmail.com"><span class="nav-text-orange">Get in
-                  touch</span></a>
+              <a class="nav-link" href="http://olavomtveit.com/documents/OlavOmtveit_CV.docx.pdf" target="_blank"><span
+                  class="nav-text-orange">CV</span></a>
             </li>
           </ul>
         </div>
@@ -65,7 +62,8 @@
           class="icon-container__social-collapse--item linkedIn" src="img/icons/linkedIn.png"
           alt="Icons made by Retinaicons @ www.flaticon.com"></a>
       <div class="socialLine line3"></div>
-      <a href="#" target="_blank"><img class="icon-container__social-collapse--item discord" src="img/icons/discord.png"
+      <a href="https://discordapp.com/users/4895/" target="_blank"><img
+          class="icon-container__social-collapse--item discord" src="img/icons/discord.png"
           alt="Icons made by Retinaicons @ www.flaticon.com"></a>
     </div>
   </header>
