changed build command

--- a/src/index.html
+++ b/src/index.html
@@ -80,8 +80,9 @@
         <h3>I'm a <span class="text-blue text-bold">front-end developer</span> with a passion for <span
             class="text-blue text-bold">design</span> and <span class="text-blue text-bold">UI</span>.</h3>
         <h3>Take a look at my <a href="./projects.html" class="linkNoStyle"><span
-              class="text-blue text-bold">projects</span></a>, or <a href="#" class="linkNoStyle"><span
-              class="text-orange text-bold">get in touch</span></a>.</h3>
+              class="text-blue text-bold">projects</span></a>, or check out my <a
+            href="http://olavomtveit.com/documents/OlavOmtveit_CV.docx.pdf" target="_Blank" class="linkNoStyle"><span
+              class="text-orange text-bold">CV</span></a>.</h3>
       </div>
       <div class="main-container__quote">
         <h3>"<span class="text-italic">Design is thinking made visual</span>".</h3>
@@ -111,7 +112,8 @@
       </div>
       <div class="about-me-card__main">
         <h3>I'm a relaxing guy who loves to explore the world and the technology in it.
-          I am excited and eager to join the Front-End world to start this chapter of my life. I have a lot of
+          I am excited and eager to join the <span class="text-orange">Front-End</span> world to start this chapter of
+          my life. I have a lot of
           experience with <span class="text-orange">people</span>, I'm a <span class="text-orange">quick learner</span>,
           and work well under <span class="text-orange">pressure</span>.
         </h3>
