--- a/src/archive.html
+++ b/src/archive.html
@@ -96,7 +96,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
     integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
     crossorigin="anonymous"></script>
-  <script src="https://npmcdn.com/axios/dist/axios.min.js"></script>
+  <script src="./node_modules/axios/dist/axios.min.js"></script>
   <script type='module' src="./js/data.js"></script>
   <script src="./js/script.js"></script>
 </body>
