--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="./archive.html">Archive</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="http://olavomtveit.com/documents/OlavOmtveit_CV.docx.pdf" target="_blank"><span
+              <a class="nav-link" href="./docs/OlavOmtveit_CV.docx.pdf" target="_blank"><span
                   class="nav-text-orange">CV</span></a>
             </li>
           </ul>
