--- a/src/index.html
+++ b/src/index.html
@@ -80,9 +80,8 @@
         <h3>I'm a <span class="text-blue text-bold">front-end developer</span> with a passion for <span
             class="text-blue text-bold">design</span> and <span class="text-blue text-bold">UI</span>.</h3>
         <h3>Take a look at my <a href="./projects.html" class="linkNoStyle"><span
-              class="text-blue text-bold">projects</span></a>, or check out my <a
-            href="http://olavomtveit.com/documents/OlavOmtveit_CV.docx.pdf" target="_Blank" class="linkNoStyle"><span
-              class="text-orange text-bold">CV</span></a>.</h3>
+              class="text-blue text-bold">projects</span></a>, or check out my <a href="./docs/OlavOmtveit_CV.docx.pdf"
+            target="_Blank" class="linkNoStyle"><span class="text-orange text-bold">CV</span></a>.</h3>
       </div>
       <div class="main-container__quote">
         <h3>"<span class="text-italic">Design is thinking made visual</span>".</h3>
