--- a/src/projects.html
+++ b/src/projects.html
@@ -93,7 +93,7 @@
           <h3><span class="text-bold">Tools: </span>HTML, CSS, JS</h3>
           <h3><span class="text-bold">To note: </span>First year project.</h3>
           <div class="visit-container">
-            <a href="http://olavomtveit.com/spaceX/index.html" class="linkNoStyle" target="_blank">
+            <a href="http://websites-olavomtveit.com/spaceX" class="linkNoStyle" target="_blank">
               <h3 class="text-orange">Visit website</h3>
             </a>
           </div>
@@ -116,7 +116,7 @@
           <h3><span class="text-bold">Tools: </span>HTML, CSS, JS</h3>
           <h3><span class="text-bold">To note: </span>First year project.</h3>
           <div class="visit-container">
-            <a href="http://olavomtveit.com/mywebpages/shadowball/index.html" class="linkNoStyle" target="_blank">
+            <a href="http://websites-olavomtveit.com/shadowball" class="linkNoStyle" target="_blank">
               <h3 class="text-orange">Visit website</h3>
             </a>
           </div>
@@ -140,7 +140,7 @@
           <h3><span class="text-bold">Tools: </span>HTML, CSS</h3>
           <h3><span class="text-bold">To note: </span>First year project.</h3>
           <div class="visit-container">
-            <a href="http://olavomtveit.com/FramX/" class="linkNoStyle" target="_blank">
+            <a href="http://websites-olavomtveit.com/framX" class="linkNoStyle" target="_blank">
               <h3 class="text-orange">Visit website</h3>
             </a>
           </div>
